Changed default box texts

--- a/public/elements/views/rmd-view.html
+++ b/public/elements/views/rmd-view.html
@@ -39,23 +39,23 @@
       <div style="display: flex; justify-content: space-between; margin-bottom: 5px; margin-top: 5px">
           <div id="turbine1rectangle" style=" float: left; width: 300px; height: 150px; background-color: darkblue; margin-left: 10px; border-color: black; border-radius: 4px ";>
               <h3 id="turbine1title" style="margin-bottom: -10px ; font-family: GE Inspira Sans;  width: 300px; text-align-last: center">Turbine 1</h3>
-              <h4 id="turbine1heartbeat" style="margin-bottom: -10px; color: black font-family: GE Inspira Sans;  width: 300px; text-align-last: center">Placeholder heartbeat text </h4>
-              <h4 id="turbine1temperature" style="margin-bottom: -10px; color: black font-family: GE Inspira Sans;  width: 300px; text-align-last: center">Placeholder temperature text </h4>
-              <h4 id="turbine1voltage" style="color: black font-family: GE Inspira Sans;  width: 300px; text-align-last: center">Placeholder voltage text </h4>
+              <h4 id="turbine1heartbeat" style="margin-bottom: -10px; color: black font-family: GE Inspira Sans;  width: 300px; text-align-last: center"></h4>
+              <h4 id="turbine1temperature" style="margin-bottom: -10px; color: black font-family: GE Inspira Sans;  width: 300px; text-align-last: center"></h4>
+              <h4 id="turbine1voltage" style="color: black font-family: GE Inspira Sans;  width: 300px; text-align-last: center"></h4>
           </div>
 
           <div id="turbine2rectangle" style=" display: inline-block; width: 300px; height: 150px; background-color: darkblue; padding-right: 10px; border-color: black; border-radius: 4px ";>
              <h3 id="turbine2title" style="margin-bottom: -10px ; font-family: GE Inspira Sans;  width: 300px; text-align-last: center">Turbine 2</h3>
-              <h4 id="turbine2heartbeat" style="margin-bottom: -10px; color: black font-family: GE Inspira Sans;  width: 300px; text-align-last: center">Placeholder heartbeat text </h4>
-              <h4 id="turbine2temperature" style="margin-bottom: -10px; color: black font-family: GE Inspira Sans;  width: 300px; text-align-last: center">Placeholder temperature text </h4>
-              <h4 id="turbine2voltage" style="color: black font-family: GE Inspira Sans;  width: 300px; text-align-last: center">Placeholder voltage text </h4>
+              <h4 id="turbine2heartbeat" style="margin-bottom: -10px; color: black font-family: GE Inspira Sans;  width: 300px; text-align-last: center"></h4>
+              <h4 id="turbine2temperature" style="margin-bottom: -10px; color: black font-family: GE Inspira Sans;  width: 300px; text-align-last: center"></h4>
+              <h4 id="turbine2voltage" style="color: black font-family: GE Inspira Sans;  width: 300px; text-align-last: center"></h4>
         </div>
 
           <div id="turbine3rectangle" style="float: right; width: 300px; height: 150px; background-color: darkblue; margin-right: 10px; border-color: black; border-radius: 4px ";>
                <h3 id="turbine3title" style="margin-bottom: -10px ; font-family: GE Inspira Sans;  width: 300px; text-align-last: center">Turbine 3</h3>
-              <h4 id="turbine3heartbeat" style="margin-bottom: -10px; color: black font-family: GE Inspira Sans;  width: 300px; text-align-last: center">Placeholder heartbeat text </h4>
-              <h4 id="turbine3temperature" style="margin-bottom: -10px; color: black font-family: GE Inspira Sans;  width: 300px; text-align-last: center">Placeholder temperature text </h4>
-              <h4 id="turbine3voltage" style="color: black font-family: GE Inspira Sans;  width: 300px; text-align-last: center">Placeholder voltage text </h4>
+              <h4 id="turbine3heartbeat" style="margin-bottom: -10px; color: black font-family: GE Inspira Sans;  width: 300px; text-align-last: center"></h4>
+              <h4 id="turbine3temperature" style="margin-bottom: -10px; color: black font-family: GE Inspira Sans;  width: 300px; text-align-last: center"></h4>
+              <h4 id="turbine3voltage" style="color: black font-family: GE Inspira Sans;  width: 300px; text-align-last: center"></h4>
           </div>
       </div>
 
