--- a/public/elements/views/about-view.html
+++ b/public/elements/views/about-view.html
@@ -6,7 +6,7 @@
 
 <dom-module id="about-view">
   <template>
-    <px-card id="myCard" header-text="About this application">
+    <px-card id="myCard" header-text="About QuestionMark">
       <style is="custom-style">
         div.markdown-html > h2 {
           margin-top: 0;
